refactor/check_output22.txt
cargo :     Checking citybound_native v0.10.0 (C:\Users\Fa\Desktop\IAF\citybound\refactor)
En línea: 1 Carácter: 58
+ ... ers\Fa\Desktop\IAF\citybound\refactor; cargo check --lib 2>&1 | Out-F ...
+                                            ~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking ci...bound\refactor):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
error: `self` parameter is only allowed in associated functions
   --> src\ecs.rs:128:18
    |
128 |     pub fn clear(&mut self) {
    |                  ^^^^^^^^^ not semantically valid as function parameter
    |
    = note: associated functions are those in `impl` or `trait` definitions

error: `self` parameter is only allowed in associated functions
   --> src\ecs.rs:136:19
    |
136 |     pub fn insert(&mut self, x: f32, y: f32, entity_bits: u64) {
    |                   ^^^^^^^^^ not semantically valid as function parameter
    |
    = note: associated functions are those in `impl` or `trait` definitions

error: `self` parameter is only allowed in associated functions
   --> src\ecs.rs:141:20
    |
141 |     pub fn rebuild(&mut self, world: &hecs::World) {
    |                    ^^^^^^^^^ not semantically valid as function parameter
    |
    = note: associated functions are those in `impl` or `trait` definitions

error: `self` parameter is only allowed in associated functions
   --> src\ecs.rs:151:23
    |
151 |     pub fn query_near(&self, x: f32, y: f32, radius: f32) -> SpatialQueryIter<'_> {
    |                       ^^^^^ not semantically valid as function parameter
    |
    = note: associated functions are those in `impl` or `trait` definitions

error: `self` parameter is only allowed in associated functions
  --> src\render_cache.rs:55:18
   |
55 |     pub fn clear(&mut self) {
   |                  ^^^^^^^^^ not semantically valid as function parameter
   |
   = note: associated functions are those in `impl` or `trait` definitions

error: `self` parameter is only allowed in associated functions
  --> src\render_cache.rs:58:18
   |
58 |     pub fn clear(&mut self) {
   |                  ^^^^^^^^^ not semantically valid as function parameter
   |
   = note: associated functions are those in `impl` or `trait` definitions

error: `self` parameter is only allowed in associated functions
  --> src\render_cache.rs:65:17
   |
65 |     pub fn push(&mut self, entry: RenderCacheEntry) {
   |                 ^^^^^^^^^ not semantically valid as function parameter
   |
   = note: associated functions are those in `impl` or `trait` definitions

error: `self` parameter is only allowed in associated functions
  --> src\render_cache.rs:72:26
   |
72 |     pub fn total_entries(&self) -> usize {
   |                          ^^^^^ not semantically valid as function parameter
   |
   = note: associated functions are those in `impl` or `trait` definitions

error: `self` parameter is only allowed in associated functions
  --> src\render_cache.rs:77:31
   |
77 |     pub fn rebuild_from_world(&mut self, world: &hecs::World) {
   |                               ^^^^^^^^^ not semantically valid as function parameter
   |
   = note: associated functions are those in `impl` or `trait` definitions

error: `self` parameter is only allowed in associated functions
   --> src\render_cache.rs:114:24
    |
114 |     pub fn iter_layers(&self) -> RenderCacheIter<'_> {
    |                        ^^^^^ not semantically valid as function parameter
    |
    = note: associated functions are those in `impl` or `trait` definitions

error[E0308]: mismatched types
   --> src\ecs.rs:119:38
    |
119 |     fn cell_index(x: f32, y: f32) -> (usize, usize) {
    |        ----------                    ^^^^^^^^^^^^^^ expected `(usize, usize)`, found `()`
    |        |
    |        implicitly returns `()` as its body has no tail or `return` expression
    |
    = note:  expected tuple `(usize, usize)`
            found unit type `()`

error[E0433]: cannot find `Self` in this scope
   --> src\ecs.rs:137:24
    |
137 |         let (cx, cy) = Self::cell_index(x, y);
    |                        ^^^^ `Self` is only available in impls, traits, and type definitions

error[E0433]: cannot find `Self` in this scope
   --> src\ecs.rs:153:24
    |
153 |         let (cx, cy) = Self::cell_index(x, y);
    |                        ^^^^ `Self` is only available in impls, traits, and type definitions

error[E0599]: no method named `rebuild` found for struct `SpatialGrid` in the current scope
   --> src\ecs.rs:344:18
    |
105 | pub struct SpatialGrid {
    | ---------------------- method `rebuild` not found for this struct
...
344 |     spatial_grid.rebuild(&world);
    |                  ^^^^^^^ method not found in `SpatialGrid`

error[E0599]: no method named `rebuild_from_world` found for struct `RenderCache` in the current scope
   --> src\ecs.rs:348:18
    |
348 |     render_cache.rebuild_from_world(&world);
    |                  ^^^^^^^^^^^^^^^^^^ method not found in `RenderCache`
    |
   ::: src\render_cache.rs:42:1
    |
 42 | pub struct RenderCache {
    | ---------------------- method `rebuild_from_world` not found for this struct

error[E0599]: no method named `rebuild` found for struct `SpatialGrid` in the current scope
   --> src\ecs.rs:368:29
    |
105 | pub struct SpatialGrid {
    | ---------------------- method `rebuild` not found for this struct
...
368 |     game_world.spatial_grid.rebuild(&game_world.world);
    |                             ^^^^^^^ method not found in `SpatialGrid`

error[E0599]: no method named `iter_layers` found for reference `&RenderCache` in the current scope
   --> src\render.rs:112:24
    |
112 |     for entry in cache.iter_layers() {
    |                        ^^^^^^^^^^^ method not found in `&RenderCache`

Some errors have detailed explanations: E0308, E0433, E0599.
For more information about an error, try `rustc --explain E0308`.
error: could not compile `citybound_native` (lib) due to 17 previous errors
